2-MetalLB/example.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foolb-app
  labels:
    app: http-echo
spec:
  containers:
  - name: foolb-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=foo"
---
kind: Pod
apiVersion: v1
metadata:
  name: barlb-app
  labels:
    app: http-echo
spec:
  containers:
  - name: barlb-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=bar"
---
kind: Pod
apiVersion: v1
metadata:
  name: misalb-app
  labels:
    app: http-echo
spec:
  containers:
  - name: misalb-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=misabar"

---
kind: Service
apiVersion: v1
metadata:
  name: foolb-service
spec:
  type: LoadBalancer
  selector:
    app: http-echo
  ports:
  # Default port used by the image
  - port: 5678
