2-MetalLB/IngressLB.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lb-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/lb"
        backend:
          service:
            name: foolb-service
            port:
              number: 5678
